Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -57,18 +57,24 @@
 <pre><code>  &lt;body class="eupopup eupopup-top"&gt;
 </code></pre>
 
-<p>You can also choose from these layouts:</p>
+<h3>
+<a id="you-can-also-choose-from-these-layouts" class="anchor" href="#you-can-also-choose-from-these-layouts" aria-hidden="true"><span class="octicon octicon-link"></span></a>You can also choose from these layouts:</h3>
+
+<p><img src="https://raw.githubusercontent.com/wimagguc/jquery-eu-cookie-law-popup/master/docs/eucookielaw-demo.jpg" alt="image"></p>
 
 <ul>
-<li>"eupopup", or "eupopup eupopup-top"</li>
-<li>"eupopup eupopup-fixedtop"</li>
-<li>"eupopup eupopup-bottom"</li>
-<li>"eupopup eupopup-bottomleft"</li>
-<li>"eupopup eupopup-bottomright"</li>
-<li>"eupopup eupopup-block"</li>
+<li>Top of the page (“eupopup”, or “eupopup eupopup-top”)</li>
+<li>Fixed banner on top (“eupopup eupopup-fixedtop”)</li>
+<li>Fixed to bottom (“eupopup eupopup-bottom”)</li>
+<li>Fixed window, to bottom left (“eupopup eupopup-bottomleft”)</li>
+<li>Fixed window, bottom right (“eupopup eupopup-bottomright”)</li>
+<li>Inline (“eupopup eupopup-block”)</li>
 </ul>
 
-<p>And these colours or styles:</p>
+<h3>
+<a id="and-these-colours-or-styles" class="anchor" href="#and-these-colours-or-styles" aria-hidden="true"><span class="octicon octicon-link"></span></a>And these colours or styles:</h3>
+
+<p><img src="https://raw.githubusercontent.com/wimagguc/jquery-eu-cookie-law-popup/master/docs/eucookielaw-demo2.jpg" alt="image"></p>
 
 <ul>
 <li>White text on dark background ("eupopup-color-default")</li>
@@ -109,6 +115,16 @@
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-1935308-3");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
