[update] plugin defined for jQuery $ -- docs and versions

--- a/demo.html
+++ b/demo.html
@@ -127,7 +127,7 @@
 	</div>
 
 	<div class="code">
-		(new EuCookieLawPopup()).init({
+		$(document).euCookieLawPopup().init({
 		<br>
 		&nbsp; 	cookiePolicyUrl : 'http://www.wimagguc.com/?cookie-policy',
 		<br>
