[update] new default cookie policy url

--- a/demo.html
+++ b/demo.html
@@ -107,7 +107,7 @@
 <br>
 &nbsp; &nbsp; &nbsp; &lt;a href="#" class="eupopup-button eupopup-button_1"&gt;Continue&lt;/a&gt;
 <br>
-&nbsp; &nbsp; &nbsp; &lt;a href="http://www.wimagguc.com/?cookie-policy" target="_blank" class="eupopup-button eupopup-button_2"&gt;Learn more&lt;/a&gt;
+&nbsp; &nbsp; &nbsp; &lt;a href="/?cookie-policy" target="_blank" class="eupopup-button eupopup-button_2"&gt;Learn more&lt;/a&gt;
 <br>
 &nbsp; &nbsp; &lt;/div&gt;
 <br>
@@ -129,7 +129,7 @@
 	<div class="code">
 		$(document).euCookieLawPopup().init({
 		<br>
-		&nbsp; 	cookiePolicyUrl : 'http://www.wimagguc.com/?cookie-policy',
+		&nbsp; 	cookiePolicyUrl : '/?cookie-policy',
 		<br>
 		&nbsp; 	popupPosition : 'top',
 		<br>
